--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^6.1.0
   flutter_rating_bar: ^4.0.1
+  http: ^1.1.2
+  provider: ^6.0.3
+  assorted_layout_widgets: ^9.0.0
 
 dev_dependencies:
   flutter_test:
@@ -62,7 +65,6 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/restaurants.json
     - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
